--- a/style.css
+++ b/style.css
@@ -1,404 +1,436 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-
-header{
-    font-family: "Open Sans";
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+header {
+  font-family: "Lato", sans-serif;
 }
-html{
-    height: 100%;
-    scroll-behavior: smooth;
+html {
+  height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
-    display: block;
-    overflow-x: hidden;
-    height: 100%;
-    margin: 0%;
-  }
-  nav {
-    background-color: white;
-  }
-  .navbar-brand img {
-    max-height: 50px;
-  }
-  .navbar-brand {
-    font-size: 24px;
-    text-transform: uppercase;
-    font-weight: 900;
-    color: #683aa4;
-  }
-  nav ul li a {
-    color: #a9a9a9;
-    font-size: 22px;
-    margin: auto 10px;
-  }
-  nav ul li a:hover {
-    color: #683aa4;
-  }
-  .moon{
-    position: relative;
-    width: 8%;
-    transform: translate(-50%, -50%);
-    left: 50%;
-    top: 50%;
+  display: block;
+  overflow-x: hidden;
+  height: 100%;
+  margin: 0%;
+  font-family: "Lato", sans-serif;
+}
+nav {
+  background-color: white;
+}
+.navbar-brand img {
+  max-height: 50px;
+}
+.navbar-brand {
+  font-size: 24px;
+  text-transform: uppercase;
+  font-weight: 900;
+  color: #683aa4;
+}
+nav ul li a {
+  color: #a9a9a9;
+  font-size: 22px;
+  margin: auto 10px;
+}
+nav ul li a:hover {
+  color: #683aa4;
+}
+.moon {
+  position: relative;
+  width: 8%;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+}
 
-  }
+.nep1 {
+  left: 40%;
+}
+.jup1 {
+  left: 55%;
+}
+.jup2 {
+  left: 70%;
+}
+.jup3 {
+  left: 60%;
+}
+.jup4 {
+  left: 37%;
+}
+.eth {
+  left: 60%;
+}
+.field {
+  position: absolute;
+  width: 100%;
+  transform: translate(-50%, 0%);
+  left: 50%;
+  bottom: 0%;
+}
 
-  .nep1{
-    left: 40%;
-  }
-  .jup1{
-    left: 55%;
-  }
-  .jup2{
-    left: 70%;
-  }
-  .jup3{
-    left: 60%;
-  }
-  .jup4{
-    left: 37%;
-  }
-  .eth{
-    left: 60%;
-  }
-  .field{
-    position: absolute;
-    width: 100%;
-    transform: translate(-50%, 0%);
-    left: 50%;
-    bottom: 0%;
-  }
+.space {
+  background-image: url(img/black.jpg);
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  position: fixed;
+  height: 100%;
+}
+#ship {
+  position: fixed;
+  left: 50%;
+  width: 15%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 5;
+}
 
-  .space{
-      background-image: url(img/black.jpg);
-      background-position: center;
-      background-size: cover;
-      width: 100%;
-      position: fixed;
-      height: 100%;
+.sun {
+  position: absolute;
+  width: 100%;
+  transform: translate(-50%, 0%);
+  left: 50%;
+  bottom: 0%;
+}
+.sun-wrap {
+  width: 100%;
+  transform: translateZ(-1px);
+  height: 100%;
+}
 
-  }
-  #ship{
+.jupiter {
+  position: relative;
+  width: 40%;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+}
 
-    position: fixed;
-    left: 50%;
-    width: 15%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 5;
+.jup-wrap {
+  width: 100%;
+  height: 100%;
+}
+.mercury {
+  position: relative;
+  width: 600px;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+}
 
-  }
+.mercury-wrap {
+  width: 100%;
+  height: 100%;
+}
+.saturn {
+  position: relative;
+  width: 2000px;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+  z-index: 4;
+}
 
-  .sun{
-    position: absolute;
-    width: 100%;
-    transform: translate(-50%, 0%);
-    left: 50%;
-    bottom: 0%;
-  }
-  .sun-wrap{
-    width: 100%;
-    transform: translateZ(-1px);
-    height: 100%;
-  }
+.sat-wrap {
+  width: 100%;
+  height: 100%;
+}
+.parallax {
+  height: 500px; /* fallback for older browsers */
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+  -webkit-perspective: 300px;
+  perspective: 300px;
+  -webkit-perspective-origin-x: 100%;
+  perspective-origin-x: 100%;
+}
+.parallax::-webkit-scrollbar {
+  display: none;
+}
 
-  .jupiter{
-    position: relative;
-    width: 40%;
-    transform: translate(-50%, -50%);
-    left: 50%;
-    top: 50%;
+.parallax__group {
+  position: relative;
+  height: 500px; /* fallback for older browsers */
+  height: 100vh;
+  margin-top: 40%;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
 
-  }
+.parallax__layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  -webkit-transform-origin-x: 100%;
+  transform-origin-x: 100%;
+}
 
-  .jup-wrap{
-    width: 100%;
-    height: 100%;   
-  }
-  .mercury{
-    position: relative;
-    width: 600px;
-    transform: translate(-50%, -50%);
-    left: 50%;
-    top: 50%;
+.parallax__layer--fore {
+  -webkit-transform: translateZ(90px) scale(0.7);
+  transform: translateZ(200px) scale(0.5);
+  z-index: 1;
+}
+.parallax__layer--fore1 {
+  -webkit-transform: translateZ(70px) scale(0.7);
+  transform: translateZ(140px) scale(0.5);
+  z-index: 1;
+}
+.parallax__layer--fore2 {
+  -webkit-transform: translateZ(90px) scale(0.7);
+  transform: translateZ(50px) scale(0.5);
+  z-index: 5;
+}
+.parallax__layer--fore3 {
+  -webkit-transform: translateZ(120px) scale(0.7);
+  transform: translateZ(50px) scale(0.9);
+  z-index: 3;
+}
+.parallax__layer--fore4 {
+  -webkit-transform: translateZ(120px) scale(0.7);
+  transform: translateZ(90px) scale(0.2);
+  z-index: 3;
+}
+.parallax__layer--fore5 {
+  -webkit-transform: translateZ(120px) scale(0.7);
+  transform: translateZ(20px) scale(0.9);
+  z-index: 3;
+}
+.parallax__layer--fore6 {
+  -webkit-transform: translateZ(120px) scale(0.7);
+  transform: translateZ(80px) scale(0.9);
+  z-index: 3;
+}
 
-  }
+.parallax__layer--base {
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  z-index: 4;
+}
 
-  .mercury-wrap{
-    width: 100%;
-    height: 100%;   
-  }
-  .saturn{
-    position: relative;
-    width: 2000px;
-    transform: translate(-50%, -50%);
-    left: 50%;
-    top: 50%;
-    z-index: 4;
-  }
+.parallax__layer--back {
+  -webkit-transform: translateZ(-300px) scale(2);
+  transform: translateZ(-300px) scale(2);
+  z-index: 3;
+}
 
-  .sat-wrap{
-    width: 100%;
-    height: 100%;   
-  }
-  .parallax {
-    height: 500px; /* fallback for older browsers */
-    height: 100vh;
-    overflow-x: hidden;
-    overflow-y: auto;
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-    -webkit-perspective: 300px;
-    perspective: 300px;
-    -webkit-perspective-origin-x: 100%;
-    perspective-origin-x: 100%;
-  }
-  .parallax::-webkit-scrollbar {
-    display: none;
-  }
+.parallax__layer--deep {
+  -webkit-transform: translateZ(-600px) scale(3);
+  transform: translateZ(-600px) scale(3);
+  z-index: 2;
+}
+.parallax__layer--text {
+  -webkit-transform: translateZ(0);
+  transform: translateZ(100px) scale(0.7);
+  z-index: 5;
+}
 
-  .parallax__group {
-    position: relative;
-    height: 500px; /* fallback for older browsers */
-    height: 100vh;
-    margin-top: 40%;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-  }
+.intro {
+  padding-left: 10%;
+  width: 40%;
+  z-index: 5;
+}
+.left {
+  box-sizing: border-box;
+  padding-left: 60%;
+  width: 90%;
+  padding-top: 10%;
+}
+.heading {
+  font-size: 70px;
+  color: whitesmoke;
+}
+.icon {
+  background-color: white;
+  border-radius: 50%;
+}
 
-  .parallax__layer {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    -webkit-transform-origin-x: 100%;
-    transform-origin-x: 100%;
+.text {
+  color: whitesmoke;
+  font-size: 2rem;
+}
+@media only screen and (max-width: 1000px) {
+  .tags {
+    visibility: hidden;
   }
+}
+.tags {
+  position: fixed;
+  display: flex;
+  z-index: 1;
+  flex-direction: column;
+  justify-content: space-between;
+  right: 0%;
+  height: 90%;
+  top: 5%;
+}
 
-  .parallax__layer--fore {
-    -webkit-transform: translateZ(90px) scale(.7);
-    transform: translateZ(200px) scale(.5);
-    z-index: 1;
-  }
-  .parallax__layer--fore1 {
-    -webkit-transform: translateZ(70px) scale(.7);
-    transform: translateZ(140px) scale(.5);
-    z-index: 1;
-  }
-  .parallax__layer--fore2 {
-    -webkit-transform: translateZ(90px) scale(.7);
-    transform: translateZ(50px) scale(.5);
-    z-index: 5;
-  }
-  .parallax__layer--fore3{
-    -webkit-transform: translateZ(120px) scale(.7);
-    transform: translateZ(50px) scale(.9);
-    z-index:3;
-  }
-  .parallax__layer--fore4{
-    -webkit-transform: translateZ(120px) scale(.7);
-    transform: translateZ(90px) scale(.2);
-    z-index:3;
-  }
-  .parallax__layer--fore5{
-    -webkit-transform: translateZ(120px) scale(.7);
-    transform: translateZ(20px) scale(.9);
-    z-index:3;
-  }
-  .parallax__layer--fore6{
-    -webkit-transform: translateZ(120px) scale(.7);
-    transform: translateZ(80px) scale(.9);
-    z-index:3;
-  }
+.tag {
+  font-size: large;
+  color: black;
+  height: 7vh;
+  width: 7vh;
+  background-color: transparent;
+  border-radius: 50%;
+  border: 2px solid white;
+  box-sizing: border-box;
+  transition: border-color 0.2s;
+  overflow: hidden;
+  z-index: 1;
+  right: 0%;
+  transform: translateX(-50%);
+}
+.tag:hover {
+  border: 5px solid white;
+}
+.home {
+  top: 10px;
+  background-image: url("img/house-fill.svg");
+  background-color: black;
+  background-size: 5vh;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 
-  .parallax__layer--base {
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    z-index: 4;
-  }
+.git {
+  background-image: url("img/github.svg");
+  background-color: white;
+  background-size: 7vh;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.linked {
+  background-image: url("img/linkedin.svg");
+  background-color: white;
+  background-size: 7vh;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.center {
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+  position: relative;
+}
 
-  .parallax__layer--back {
-    -webkit-transform: translateZ(-300px) scale(2);
-    transform: translateZ(-300px) scale(2);
-    z-index: 3;
-  }
+.instructions {
+  position: fixed;
+  left: 10px;
+  top: 10px;
+  color: white;
+  border: 2px solid white;
+  text-align: center;
+  padding: 10px;
+  border-radius: 10px;
+  line-height: 100%;
+  visibility: visible;
+}
+.neptune-icon {
+  top: 220px;
+  background-image: url("img/neptune.png");
+  background-color: white;
+  background-size: 7vh;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.uranus-icon {
+  top: 290px;
+  background-image: url("img/uranus.png");
+  background-color: white;
+  background-size: 30vh;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.saturn-icon {
+  top: 360px;
+  background-image: url("img/saturn.png");
+  background-color: white;
+  background-size: 30vh;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.jupiter-icon {
+  top: 430px;
+  background-image: url("img/jupiter.png");
+  background-color: white;
+  background-size: 7vh;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.mars-icon {
+  top: 500px;
+  background-image: url("img/mars.png");
+  background-color: white;
+  background-size: 7vh;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.earth-icon {
+  top: 570px;
+  background-image: url("img/earth.png");
+  background-color: white;
+  background-size: 7vh;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.venus-icon {
+  top: 640px;
+  background-image: url("img/venus.png");
+  background-color: white;
+  background-size: 7vh;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.mercury-icon {
+  top: 710px;
+  background-image: url("img/mercury.png");
+  background-color: white;
+  background-size: 7vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: #cccccc;
+}
 
-  .parallax__layer--deep {
-    -webkit-transform: translateZ(-600px) scale(3);
-    transform: translateZ(-600px) scale(3);
-    z-index: 2;
-  }
-  .parallax__layer--text{
-    -webkit-transform: translateZ(0);
-    transform: translateZ(100px) scale(0.7);
-    z-index:5;
-  }
+.text-center {
+  text-align: center;
+  color: white;
+  font-size: 3rem;
+}
 
-  .intro{
-    padding-left: 10%;
-    width: 40%;
-    z-index: 5;
-  }
-  .left{
-    padding-left: 60%;
-    width: 95%;
-    padding-top: 10%;
-  }
-  .heading{
-    font-size: 70px;
-    color: whitesmoke;
-    
+#overlay {
+  background-color: #2e3440;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  z-index: 10;
+  color: #eceff4;
+  text-align: center;
+}
 
-  }
-  .icon{
-    background-color: white;
-    border-radius: 50%;
-  }
+.center-full {
+  top: 30%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
 
-  .text{
-    color: whitesmoke;
-    font-size: 2rem;
-  }
-  @media only screen and (max-width: 1000px) {
-    .tags {
-      visibility: hidden;
-    }
-  }
-  .tags{
-    position: fixed;
-    display: flex;
-    z-index: 1;
-    flex-direction: column;
-    justify-content:space-between;
-    right: 0%;
-    height: 90%;
-    top: 5%;
-    }
+button {
+  background-color: transparent;
+  border: 2px solid #bf616a;
+  font-size: 1.5rem;
+  color: #bf616a;
+  border-radius: 8px;
+  padding: 2%;
+  transition: 0.2s background-color;
+}
 
-  .tag{
-    font-size: large;
-    color:black;
-    height: 7vh;
-    width: 7vh;
-    background-color: transparent;
-    border-radius: 50%;
-    border: 2px solid white;
-    box-sizing: border-box;
-    transition: border-color 0.2s;
-    overflow: hidden;
-    z-index: 1;
-    right: 0%;
-    transform: translateX(-50%);   
-  }
-  .tag:hover{
-    border: 5px solid white;
-  }
-  .home{
-    top: 10px;
-    background-image: url("img/house-fill.svg");
-    background-color: black;
-    background-size: 5vh;
-    background-position: center;
-    background-repeat: no-repeat;
-
-  }
-
-  .git{
-    background-image: url("img/github.svg");
-    background-color: white;
-    background-size: 7vh;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  .linked{
-    background-image: url("img/linkedin.svg");
-    background-color: white;
-    background-size: 7vh;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  .center{
-    transform: translate(-50%, -50%);
-    left: 50%;
-    top: 50%;
-    position: relative;
-  }
-
-  .instructions{
-    position: fixed;
-    left: 10px;
-    top: 10px;
-    color: white;
-    border: 2px solid white;
-    text-align: center;
-    padding: 10px;
-    border-radius: 10px;
-    line-height: 100%;
-    visibility: visible;
-
-  }
-  .neptune-icon{
-    top: 220px;
-    background-image: url("img/neptune.png");
-    background-color: white;
-    background-size: 7vh;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  .uranus-icon{
-    top: 290px;
-    background-image: url("img/uranus.png");
-    background-color: white;
-    background-size: 30vh;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  .saturn-icon{
-    top: 360px;
-    background-image: url("img/saturn.png");
-    background-color: white;
-    background-size: 30vh;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  .jupiter-icon{
-    top: 430px;
-    background-image: url("img/jupiter.png");
-    background-color: white;
-    background-size: 7vh;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  .mars-icon{
-    top: 500px;
-    background-image: url("img/mars.png");
-    background-color: white;
-    background-size: 7vh;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  .earth-icon{
-    top: 570px;
-    background-image: url("img/earth.png");
-    background-color: white;
-    background-size: 7vh;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  .venus-icon{
-    top: 640px;
-    background-image: url("img/venus.png");
-    background-color: white;
-    background-size: 7vh;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  .mercury-icon{
-    top: 710px;
-    background-image: url("img/mercury.png");
-    background-color: white;
-    background-size: 7vh;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
+button:hover {
+  background-color: #bf616a;
+  color: #eceff4;
+}
